--- a/queue.yaml
+++ b/queue.yaml
@@ -1,3 +1,8 @@
 queue:
 - name: default
   rate: 5/s
+  bucket_size: 20
+  max_concurrent_requests: 8
+  retry_parameters:
+    task_retry_limit: 1
+    task_age_limit: 1h
