--- a/queue.yaml
+++ b/queue.yaml
@@ -1,8 +1,10 @@
 queue:
 - name: default
-  rate: 5/s
-  bucket_size: 20
-  max_concurrent_requests: 8
+  rate: 0.25/s
+  bucket_size: 25
+  max_concurrent_requests: 5
   retry_parameters:
-    task_retry_limit: 1
-    task_age_limit: 1h
+    task_retry_limit: 3
+    task_age_limit: 2h
+    min_backoff_seconds: 30
+    max_backoff_seconds: 120
