--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: organise-asana
-version: 3
+version: 4
 runtime: php55
 api_version: 1
 threadsafe: true
@@ -13,6 +13,9 @@ handlers:
   login: admin
 - url: /process/subtask
   script: process_subtask.php
+  login: admin
+- url: /process/attachment
+  script: process_attachment.php
   login: admin
 - url: /process/complete
   script: process_complete.php
