--- a/queue.yaml
+++ b/queue.yaml
@@ -8,3 +8,13 @@ queue:
     task_age_limit: 2h
     min_backoff_seconds: 30
     max_backoff_seconds: 120
+- name: attachments
+  rate: 5/s
+  bucket_size: 10
+  max_concurrent_requests: 2
+  retry_parameters:
+    task_retry_limit: 3
+    task_age_limit: 2h
+    min_backoff_seconds: 30
+    max_backoff_seconds: 120
+  
